--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -14,6 +14,7 @@
         android:layout_centerInParent="true"
         android:textSize="48sp"
         android:textStyle="bold"
+        android:layout_weight="1"
         />
 
     <Button
@@ -26,6 +27,7 @@
         android:layout_marginTop="30dip"
         android:textSize="48sp"
         android:textStyle="bold"
+        android:layout_weight="1"
         />
 
     <Button
@@ -38,6 +40,7 @@
         android:layout_marginTop="30dip"
         android:textSize="48sp"
         android:textStyle="bold"
+        android:layout_weight="1"
         />
 
     <Button
@@ -50,6 +53,7 @@
         android:layout_marginTop="30dip"
         android:textSize="48sp"
         android:textStyle="bold"
+        android:layout_weight="1"
         />
 
 </RelativeLayout>
