--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:gravity="center"
     >
 
     <Button
@@ -11,7 +12,7 @@
         android:layout_width="188dip"
         android:layout_height="50dip"
         android:text="@string/button_show_day"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
         android:textSize="25sp"
         android:textStyle="bold"
         android:layout_weight="1"
@@ -23,7 +24,6 @@
         android:layout_height="50dip"
         android:text="@string/button_add_drink"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/ButtonShowDay"
         android:layout_marginTop="10dip"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -36,7 +36,6 @@
         android:layout_height="50dip"
         android:text="@string/button_remove_drink"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/ButtonAddDrink"
         android:layout_marginTop="10dip"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -49,11 +48,10 @@
         android:layout_height="50dip"
         android:text="@string/button_calculate"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/ButtonRemoveDrink"
         android:layout_marginTop="10dip"
         android:textSize="25sp"
         android:textStyle="bold"
         android:layout_weight="1"
         />
 
-</RelativeLayout>
+</LinearLayout>
