--- a/res/layout/entry.xml
+++ b/res/layout/entry.xml
@@ -20,6 +20,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="4"
+            android:textSize="30sp"
+            android:textStyle="bold"
             android:gravity="center"
             android:text="date-holder"
             />
