--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -29,6 +29,7 @@
         android:textSize="25sp"
         android:textStyle="bold"
         android:layout_weight="1"
+        android:onClick="showAddScreen"
         />
 
     <Button
