--- a/res/layout/add.xml
+++ b/res/layout/add.xml
@@ -46,4 +46,28 @@
         android:textSize="15sp"
         />
 
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center"
+        >
+
+        <Checkbox
+            android:id="@+id/fizzyCheckbox"
+            />
+
+            <TextView
+                android:id="@+id/fizzyLabel"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/fizzy_text_label"
+                android:layout_centerHorizontal="true"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:gravity="center"
+                />
+    </LinearLayout>
+
 </LinearLayout>
