typo in `CheckBox'

--- a/res/layout/add.xml
+++ b/res/layout/add.xml
@@ -54,7 +54,7 @@
         android:gravity="center"
         >
 
-        <Checkbox
+        <CheckBox
             android:id="@+id/fizzyCheckbox"
             />
 
