--- a/res/layout/add.xml
+++ b/res/layout/add.xml
@@ -56,21 +56,24 @@
 
         <CheckBox
             android:id="@+id/fizzyCheckbox"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             />
 
         <TextView
             android:id="@+id/fizzyLabel"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/fizzy_text_label"
             android:layout_centerHorizontal="true"
             android:textSize="25sp"
             android:textStyle="bold"
             android:gravity="center"
+            android:layout_weight="3"
             />
 
     </LinearLayout>
+
 
 </LinearLayout>
