--- a/res/layout/entry.xml
+++ b/res/layout/entry.xml
@@ -5,14 +5,15 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:gravity="center"
+    android:padding="12dip"
     >
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:gravity="center|top"
+        android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_weight="1"
         >
 
@@ -35,7 +36,7 @@
             android:layout_centerHorizontal="true"
             android:textSize="30sp"
             android:textStyle="bold"
-            android:layout_weight="2"
+            android:layout_weight="1"
             />
     </LinearLayout>
 
@@ -54,8 +55,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:gravity="center|bottom"
+        android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_weight="1"
         >
 
