--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -43,6 +43,7 @@
         android:textSize="25sp"
         android:textStyle="bold"
         android:layout_weight="1"
+        android:onClick="showRemoveScreen"
         />
 
     <Button
