--- a/res/layout/entry.xml
+++ b/res/layout/entry.xml
@@ -40,13 +40,13 @@
             />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/ButtonTest"
+    <ListView
+        android:id="@+id/entryList"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_centerHorizontal="true"
         android:text="placeholder"
-        android:textSize="30sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         android:layout_weight="1"
         />
