--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -33,18 +33,18 @@
         android:onClick="showAddScreen"
         />
 
-    <Button
-        android:id="@+id/ButtonRemoveDrink"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/button_remove_drink"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dip"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:layout_weight="1"
-        android:onClick="showRemoveScreen"
-        />
+    <!-- <Button -->
+    <!--     android:id="@+id/ButtonRemoveDrink" -->
+    <!--     android:layout_width="fill_parent" -->
+    <!--     android:layout_height="wrap_content" -->
+    <!--     android:text="@string/button_remove_drink" -->
+    <!--     android:layout_centerHorizontal="true" -->
+    <!--     android:layout_marginTop="10dip" -->
+    <!--     android:textSize="25sp" -->
+    <!--     android:textStyle="bold" -->
+    <!--     android:layout_weight="1" -->
+    <!--     android:onClick="showRemoveScreen" -->
+    <!--     /> -->
 
     <Button
         android:id="@+id/ButtonCalculate"
